force-app/main/default/objects/Bombora_Intent__c/Bombora_Intent__c.object-meta.xml
<CustomObject>
    <label>Bombora Intent</label>
    <nameField>
        <label>Bombora Intent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bombora Intent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>