force-app/main/default/objects/Bombora_Intent__c/fields/Composite_Score__c.field-meta.xml
<CustomField>
    <fullName>Composite_Score__c</fullName>
    <inlineHelpText>Bombora Comprehensive Score</inlineHelpText>
    <label>Composite Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>