force-app/main/default/objects/Bombora_Intent__c/fields/Composite_Score_Delta__c.field-meta.xml
<CustomField>
    <fullName>Composite_Score_Delta__c</fullName>
    <inlineHelpText>Data from Bombora</inlineHelpText>
    <label>Composite Score Delta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>